@@ -31,6 +31,7 @@ import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SimpleOrderedMap;
+import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.request.SolrRequestHandler;
 import org.apache.solr.response.SolrQueryResponse;
@@ -178,8 +179,9 @@ public final class RequestHandlers {
     for (Map.Entry<PluginInfo,SolrRequestHandler> entry : handlers.entrySet()) {
       PluginInfo info = entry.getKey();
       SolrRequestHandler requestHandler = entry.getValue();
+      info = applyParamSet(config, info);
       if (requestHandler instanceof PluginInfoInitialized) {
-        ((PluginInfoInitialized) requestHandler).init(info);
+       ((PluginInfoInitialized) requestHandler).init(info);
       } else{
         requestHandler.init(info.initArgs);
       }
@@ -190,7 +192,28 @@ public final class RequestHandlers {
     if(get("") == null)
       log.warn("no default request handler is registered (either '/select' or 'standard')");
   }
-    
+
+  private PluginInfo applyParamSet(SolrConfig config, PluginInfo info) {
+    List<ParamSet> paramSets= new ArrayList<>();
+    String p = info.attributes.get("paramSet");
+    if(p!=null) {
+      for (String paramSet : StrUtils.splitSmart(p, ',')) {
+        if(config.getParamSets().containsKey(paramSet)) paramSets.add(config.getParamSets().get(paramSet));
+        else log.warn("INVALID paramSet {} in requestHandler {}", paramSet, info.toString());
+      }
+    }
+    for (ParamSet paramSet : config.getParamSets().values()) {
+      if(paramSet.matchPath(info.name)) paramSets.add(paramSet);
+    }
+    if(!paramSets.isEmpty()){
+      info = new PluginInfo(info.type, info.attributes, info.initArgs.clone(), info.children);
+      for (ParamSet paramSet : paramSets) {
+        paramSet.apply(info.initArgs);
+      }
+    }
+    return info;
+  }
+
 
   /**
    * The <code>LazyRequestHandlerWrapper</code> wraps any {@link SolrRequestHandler}.  
