@@ -1,0 +1,58 @@
+<?xml version="1.0" ?>
+
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+
+<!-- a basic solrconfig that tests can use when they want simple minimal solrconfig/schema
+     DO NOT ADD THINGS TO THIS CONFIG! -->
+<config>
+  <luceneMatchVersion>${tests.luceneMatchVersion:LUCENE_CURRENT}</luceneMatchVersion>
+  <dataDir>${solr.data.dir:}</dataDir>
+  <xi:include href="solrconfig.snippet.randomindexconfig.xml" xmlns:xi="http://www.w3.org/2001/XInclude"/>
+  <directoryFactory name="DirectoryFactory" class="${solr.directoryFactory:solr.RAMDirectoryFactory}"/>
+  <requestHandler name="standard" class="solr.StandardRequestHandler"/>
+  <requestHandler name="/update" class="solr.UpdateRequestHandler"/>
+  <paramSet name="a" path="/dump3,/root/*,/root1/**">
+    <lst name="defaults">
+      <str name="a">A</str>
+    </lst>
+    <lst name="invariants">
+      <str name="b">B</str>
+    </lst>
+    <lst name="appends">
+      <str name="c">C</str>
+    </lst>
+  </paramSet>
+  <requestHandler name="/dump3" class="DumpRequestHandler"/>
+  <requestHandler name="/dump4" class="DumpRequestHandler"/>
+  <requestHandler name="/root/dump5" class="DumpRequestHandler"/>
+  <requestHandler name="/root1/anotherlevel/dump6" class="DumpRequestHandler"/>
+  <requestHandler name="/dump1" class="DumpRequestHandler" paramSet="a"/>
+  <requestHandler name="/dump2" class="DumpRequestHandler" paramSet="a">
+    <lst name="defaults">
+      <str name="a">A1</str>
+    </lst>
+    <lst name="invariants">
+      <str name="b">B1</str>
+    </lst>
+    <lst name="appends">
+      <str name="c">C1</str>
+    </lst>
+  </requestHandler>
+
+
+</config>
